--- a/style.sty
+++ b/style.sty
@@ -16,6 +16,7 @@
 \newcommand\vecy{\local@vector{y}}
 \newcommand\vecc{\local@vector{c}}
 \newcommand\vectheta{\local@vector{\theta}}
+\newcommand\vecthetaLS{\Hat{\local@vector{\theta}}_{\mathrm{LS}}}
 %
 \def\local@matrix#1{\bm{#1}}
 \newcommand\mPhi{\local@matrix{\Phi}}
